--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFRAME TEST</title>
+    <title>SLIDER TEST</title>
     <link rel="stylesheet" href="css/styles.css">
 
     <script src="js/jquery.min.js"></script>
@@ -13,30 +13,6 @@
 </head>
 
 <body>
-
-<h2>iframe test</h2>
-<!--
-<iframe src="https://mdn-samples.mozilla.org/snippets/html/iframe-simple-contents.html" width="400" height="300">
-    <p>Your browser does not support iframes.</p>
-</iframe>
--->
-
-<!--
-<iframe src="http://www.bbc.co.uk/" width="400" height="300">
-    <p>Your browser does not support iframes.</p>
-</iframe>
--->
-
-<iframe src="https://renderwell.github.io/keble.uiprototype" width="90%" height="500">
-    <p>Your browser does not support iframes.</p>
-</iframe>
-
-<!--
-<iframe src="http://redux.js.org/" width="400" height="300">
-    <p>Your browser does not support iframes.</p>
-</iframe>
--->
-
 <h2>Carousel</h2>
 
 <ul class="bxslider">
