--- a/test-page-2.html
+++ b/test-page-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFRAME TEST</title>
+    <title>SLIDER TEST</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
