--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLIDER TEST</title>
+    
     <link rel="stylesheet" href="css/styles.css">
+    
+    <link href="css/jquery.bxslider.css" rel="stylesheet" />    
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.bxslider.min.js"></script>
-    <link href="css/jquery.bxslider.css" rel="stylesheet" />
+    <!--
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    -->
 </head>
 
 <body>
@@ -20,6 +23,13 @@
     <li><a href="test-page-2" target="_parent"><img src="slider_images/image_02.jpg" /></a></li>
     <li><a href="test-page-3" target="_parent"><img src="slider_images/image_03.jpg" /></a></li>
 </ul>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.bxslider.min.js"></script>
+
+<!--
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+-->    
 
 <script>
 $(document).ready(function(){
