--- a/index.html
+++ b/index.html
@@ -5,36 +5,60 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLIDER TEST</title>
-    
+
     <link rel="stylesheet" href="css/styles.css">
-    
-    <link href="css/jquery.bxslider.css" rel="stylesheet" />    
 
     <!--
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <link href="css/jquery.bxslider.css" rel="stylesheet" />
     -->
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 
 <body>
-<h2>Carousel</h2>
+<h2>Slider</h2>
 
+<!--
 <ul class="bxslider">
     <li><a href="test-page-1" target="_parent"><img src="slider_images/image_01.jpg" /></a></li>
     <li><a href="test-page-2" target="_parent"><img src="slider_images/image_02.jpg" /></a></li>
     <li><a href="test-page-3" target="_parent"><img src="slider_images/image_03.jpg" /></a></li>
 </ul>
-
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.bxslider.min.js"></script>
+-->
 
 <!--
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
--->    
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.bxslider.min.js"></script>
+-->
 
+<!--
 <script>
 $(document).ready(function(){
     $('.bxslider').bxSlider();
 });
+-->
+
+<div class="your-class">
+    <div>your content 1</div>
+    <div>your content 2</div>
+    <div>your content 3</div>
+</div>
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.your-class').slick({
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 3
+        });
+    });
+</script>
+
 </script>
 </body>
 </html>
