--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-<h2>Slider</h2>
+<main>
+    <header class="slider-header">
+        <p>Today's</p>
+        <h2>Headlines</h2>
+    </header>
 
 <!--
 <ul class="bxslider">
@@ -39,11 +43,32 @@ $(document).ready(function(){
 });
 -->
 
-<div class="your-class">
-    <div>your content 1</div>
-    <div>your content 2</div>
-    <div>your content 3</div>
+<!--
+<div class="slider-for">
+    <div><img src="../slider_images/image_01.jpg" /></div>
+    <div><img src="../slider_images/image_02.jpg" /></div>
+    <div><img src="../slider_images/image_03.jpg" /></div>
 </div>
+
+<div class="slider-nav">
+    <div><img src="../slider_images/image_01.jpg" /></div>
+    <div><img src="../slider_images/image_02.jpg" /></div>
+    <div><img src="../slider_images/image_03.jpg" /></div>
+</div>
+-->
+
+<div class="slider-for">
+    <div><h3>1</h3></div>
+    <div><h3>2</h3></div>
+    <div><h3>3</h3></div>
+</div>
+
+<div class="slider-nav">
+    <div><h3>1</h3></div>
+    <div><h3>2</h3></div>
+    <div><h3>3</h3></div>
+</div>
+</main>
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
@@ -51,14 +76,30 @@ $(document).ready(function(){
 
 <script type="text/javascript">
     $(document).ready(function(){
-        $('.your-class').slick({
-            infinite: true,
-            slidesToShow: 3,
-            slidesToScroll: 3
+        // $('.your-class').slick({
+        //     infinite: true,
+        //     slidesToShow: 3,
+        //     slidesToScroll: 3
+        // });
+
+        $('.slider-for').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            arrows: false,
+            fade: true,
+            asNavFor: '.slider-nav'
+        });
+
+        $('.slider-nav').slick({
+            slidesToShow: 2,
+            slidesToScroll: 1,
+            asNavFor: '.slider-for',
+            dots: true,
+            centerMode: true,
+            focusOnSelect: true
         });
     });
 </script>
 
-</script>
 </body>
 </html>
