Styles and markup.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLIDER TEST</title>
 
-    <link rel="stylesheet" href="css/styles.css">
 
     <!--
     <link href="css/jquery.bxslider.css" rel="stylesheet" />
@@ -14,10 +13,15 @@
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-<main>
+
+<section class="main-slider">
+<div class="content">
     <header class="slider-header">
         <p>Today's</p>
         <h2>Headlines</h2>
@@ -29,14 +33,10 @@
     <li><a href="test-page-2" target="_parent"><img src="slider_images/image_02.jpg" /></a></li>
     <li><a href="test-page-3" target="_parent"><img src="slider_images/image_03.jpg" /></a></li>
 </ul>
--->
 
-<!--
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.bxslider.min.js"></script>
--->
 
-<!--
 <script>
 $(document).ready(function(){
     $('.bxslider').bxSlider();
@@ -61,14 +61,20 @@ $(document).ready(function(){
     <div><h3>1</h3></div>
     <div><h3>2</h3></div>
     <div><h3>3</h3></div>
+    <div><h3>4</h3></div>
+    <div><h3>5</h3></div>
 </div>
 
 <div class="slider-nav">
     <div><h3>1</h3></div>
     <div><h3>2</h3></div>
     <div><h3>3</h3></div>
+    <div><h3>4</h3></div>
+    <div><h3>5</h3></div>
 </div>
-</main>
+
+</div>
+</section>
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
