--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ $(document).ready(function(){
 -->
 
 <div class="slider-for">
-    <div><h3><a href="test-page-1.html" target="_parent">1</h3></a></div>
-    <div><h3><a href="test-page-2.html" target="_parent">2</h3></a></div>
-    <div><h3><a href="test-page-3.html" target="_parent">3</h3></a></div>
-    <div><h3><a href="test-page-1.html" target="_parent">4</h3></a></div>
-    <div><h3><a href="test-page-2.html" target="_parent">5</h3></a></div>
+    <div><h3><a href="test-page-1.html" target="_parent">1</a></h3></div>
+    <div><h3><a href="test-page-2.html" target="_parent">2</a></h3></div>
+    <div><h3><a href="test-page-3.html" target="_parent">3</a></h3></div>
+    <div><h3><a href="test-page-1.html" target="_parent">4</a></h3></div>
+    <div><h3><a href="test-page-2.html" target="_parent">5</a></h3></div>
 </div>
 
 <div class="slider-nav">
