Pictures and links.

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@ $(document).ready(function(){
 -->
 
 <div class="slider-for">
-    <div><h3><a href="test-page-1.html" target="_parent">1</a></h3></div>
-    <div><h3><a href="test-page-2.html" target="_parent">2</a></h3></div>
-    <div><h3><a href="test-page-3.html" target="_parent">3</a></h3></div>
-    <div><h3><a href="test-page-1.html" target="_parent">4</a></h3></div>
-    <div><h3><a href="test-page-2.html" target="_parent">5</a></h3></div>
+    <div><h3 style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">1</a></h3></div>
+    <div><h3 style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">2</a></h3></div>
+    <div><h3 style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
+    <div><h3 style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">4</a></h3></div>
+    <div><h3 style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
 </div>
 
 <div class="slider-nav">
-    <div><h3>1</h3></div>
-    <div><h3>2</h3></div>
-    <div><h3>3</h3></div>
-    <div><h3>4</h3></div>
-    <div><h3>5</h3></div>
+    <div><h3 style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
+    <div><h3 style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
+    <div><h3 style="background-image: url(slider_images/image_03.jpg)">&nbsp;</h3></div>
+    <div><h3 style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
+    <div><h3 style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
 </div>
 
 </div>
