--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ $(document).ready(function(){
         document.body.style.width = window.innerWidth;
     };
     document.body.addEventListener('resize', resized);
-    resize();
+    resized();
 </script>
 <script type="text/javascript">
     $(document).ready(function(){
