--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $(document).ready(function(){
 <script type="text/javascript" src="slick/slick.min.js"></script>
 <script type="text/javascript">
     var resized = function () {
-        console.log('resizing');
+        console.log('resizing',window.innerWidth);
         document.body.style.width = window.innerWidth;
     };
     window.addEventListener('resize', resized);
