--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <a href="https://www.google.com">LINK TO GOOGLE</a>
 
 <section class="main-slider">
 <div class="content">
