--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <a href="https://www.google.com" target="_blank">LINK TO GOOGLE</a>
+    <a href="https://www.google.com" target="_parent">LINK TO GOOGLE</a>
 
 <section class="main-slider">
 <div class="content">
