--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@ node.parentNode.insertBefore(gads, node);
 
 <script type='text/javascript'>
 googletag.cmd.push(function() {
-googletag.defineSlot('/11935007/Sharethrough-Testing/Native_Ad_Unit', [1, 1], 'div-gpt-ad-1436460811425-0').addService(googletag.pubads()).setTargeting("strnativekey", "49e170a8");
-googletag.pubads().enableSingleRequest();
-googletag.enableServices();
-});
+
+    googletag.defineSlot('/8663477/CNNi', [[1, 1]], 'div-gpt-ad-1445633204778-0').addService(googletag.pubads().setTargeting("status","sharethrough").setTargeting("pos","nat_atf_01").setTargeting("strnativekey","rC1K8snX7aWNXW21tmytT5x9")); 
+
+    googletag.pubads().enableSingleRequest();
+
+    googletag.enableServices();
+
+  });
 </script>
 
 
