--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ googletag.enableServices();
 
   googletag.cmd.push(function() {
 
-    googletag.defineSlot('/8663477/TNC', [1, 1], 'div-gpt-ad-1480421260927-0').addService(googletag.pubads());
+    googletag.defineSlot('/8663477/TNC', [1, 1], 'div-gpt-ad-1480421260927-0').addService(googletag.pubads()).setTargeting('strnativekey','rC1K8snX7aWNXW21tmytT5x9');
 
     googletag.enableServices();
 
