--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
 
 <!-- /8663477/TNC -->
 
-<!--
+
 <div id='div-gpt-ad-1480421260927-0' style='height:1px; width:1px;'>
 <script>
   googletag.cmd.push(function() { googletag.display('div-gpt-ad-1480421260927-0'); });
 </script>
 </div>
--->
 
 <div class="slider-for">
     <div><h3 style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">1</a></h3></div>
@@ -53,11 +52,7 @@
     <div><h3 style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
     <div>
         <h3>
-<div id='div-gpt-ad-1480421260927-0' style='height:1px; width:1px;'>
-<script>
-  googletag.cmd.push(function() { googletag.display('div-gpt-ad-1480421260927-0'); });
-</script>
-</div>
+            THE ADVERTISEMENT
         </h3>
     </div>
     <div><h3 style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
