--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
 </div>
 
 <div class="slider-for">
-    <div><h3 style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">1</a></h3></div>
-    <div><h3 style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">2</a></h3></div>
-    <div><h3 style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">1</a></h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">2</a></h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
     <div>
-        <h3>
+        <h3 class="slide">
             THE ADVERTISEMENT
         </h3>
     </div>
-    <div><h3 style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
 </div>
 
 <div class="slider-nav">
-    <div><h3 style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
-    <div><h3 style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
-    <div><h3 style="background-image: url(slider_images/image_03.jpg)">&nbsp;</h3></div>
-    <div><h3 style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
-    <div><h3 style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_03.jpg)">&nbsp;</h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_01.jpg)">&nbsp;</h3></div>
+    <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)">&nbsp;</h3></div>
 </div>
 
 </div>
