--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">2</a></h3></div>
     <div><h3 class="slide" style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
     <div>
-        <h3 class="slide">
+        <div class="slide">
             THE ADVERTISEMENT
-        </h3>
+        </div>
     </div>
     <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
 </div>
