--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
         <h2>Headlines</h2>
     </header>
 
-<!-- /8663477/TNC -->
-
-
+<!--
 <div id='div-gpt-ad-1480421260927-0' style='height:1px; width:1px;'>
 <script>
   googletag.cmd.push(function() { googletag.display('div-gpt-ad-1480421260927-0'); });
 </script>
 </div>
+-->
 
 <div class="slider-for">
     <div><h3 class="slide" style="background-image: url(slider_images/image_01.jpg)"><a href="test-page-1.html" target="_parent">1</a></h3></div>
     <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">2</a></h3></div>
     <div><h3 class="slide" style="background-image: url(slider_images/image_03.jpg)"><a href="test-page-3.html" target="_parent">3</a></h3></div>
     <div>
-        <div class="slide">
-            THE ADVERTISEMENT
+        <div class="slide" id='div-gpt-ad-1480421260927-0' style='height:1px; width:1px;'>
+            <script>
+                googletag.cmd.push(function() { googletag.display('div-gpt-ad-1480421260927-0'); });
+             </script>
         </div>
     </div>
     <div><h3 class="slide" style="background-image: url(slider_images/image_02.jpg)"><a href="test-page-2.html" target="_parent">5</a></h3></div>
